--- a/index.html
+++ b/index.html
@@ -140,68 +140,28 @@ https://templatemo.com/tm-597-neural-glass
     </section>
 
     <!-- Section 2: Diagonal Features -->
-    <section class="features" id="features">
-      <div class="features-container">
-        <h2 class="section-title">QUANTUM CAPABILITIES</h2>
-        <div class="diagonal-grid">
-          <div class="feature-row">
-            <div class="feature-content glass">
-              <div class="feature-icon">🧠</div>
-              <h3>Neural Processing</h3>
-              <p>
-                Advanced AI-driven interfaces that adapt to your consciousness
-                patterns, creating personalized digital experiences that evolve
-                with your neural pathways.
-              </p>
-            </div>
-            <div class="feature-visual glass"></div>
-          </div>
 
-          <div class="feature-row">
-            <div class="feature-content glass">
-              <div class="feature-icon">⚡</div>
-              <h3>Quantum Speed</h3>
-              <p>
-                Instantaneous data processing through quantum tunneling
-                algorithms, delivering response times that exist outside
-                conventional spacetime constraints.
-              </p>
-            </div>
-            <div class="feature-visual glass"></div>
-          </div>
-
-          <div class="feature-row">
-            <div class="feature-content glass">
-              <div class="feature-icon">🌐</div>
-              <h3>Dimensional Sync</h3>
-              <p>
-                Seamless synchronization across multiple reality layers,
-                ensuring your digital presence remains consistent throughout
-                parallel dimensions.
-              </p>
-            </div>
-            <div class="feature-visual glass"></div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Section 3: Hexagonal Showcase -->
     <section class="showcase" id="showcase">
-      <h2 class="section-title">MATRIX PROTOCOLS</h2>
+      <h2 class="section-title">MY SKILLS</h2>
       <div class="hexagon-container">
         <div class="hexagon">
           <div class="hexagon-inner glass">
-            <div class="hexagon-icon">🔮</div>
-            <h4>Holographic UI</h4>
-            <p>3D interfaces projected into reality space</p>
+            <div class="hexagon-icon">
+              <img src="./icons/php.png"alt="">
+            </div>
+            <h4>PHP</h4>
+            <p>Started Backend Development With This</p>
           </div>
         </div>
         <div class="hexagon">
           <div class="hexagon-inner glass">
-            <div class="hexagon-icon">🛡️</div>
-            <h4>Quantum Security</h4>
-            <p>Unbreakable encryption protocols</p>
+            <div class="hexagon-icon">
+              <img src="./icons/laravel.png" alt="">
+            </div>
+            <h4>Laravel</h4>
+            <p>Most Projects are made with this</p>
           </div>
         </div>
         <div class="hexagon">
